Fixed hexagon svg on IE by: adding explicit height in CSS and changing svg to reference local. Also necessitated loading SVG via ajax, which lead me to add bower and jquery.

--- a/source/stylesheets/_hex.scss
+++ b/source/stylesheets/_hex.scss
@@ -1,11 +1,13 @@
 
 %hex--middle {
   width: 348px;
+  height: 401px;
   stroke: #ccc;
 }
 
 %hex--back {
   width: 348px;
+  height: 401px;
   stroke: #ddd;
 }
 
@@ -49,6 +51,7 @@
 
   .hex--front {
     width: 424px;
+    height: 488px;
     stroke: #aaa;
     left: 50%;
   }
